# radioroso_certh

./: readme.md
camera_helpers/: CMakeLists.txt  package.xml
camera_helpers/include/camera_helpers/: camera_server.hpp
camera_helpers/src/: camera_server.cpp  camera_server_node.cpp
cvx_orec_linemod/: CMakeLists.txt  package.xml
cvx_orec_linemod/include/cvx/obj3d/: MeshUtils.h  PlaneDetector.h  TOD.h
cvx_orec_linemod/include/cvx/orec/linemod/: LINEMOD.h  linemod.hpp
cvx_orec_linemod/src/: CMakeLists.txt  PlaneDetector.cpp  detect.cpp  render_model.cpp  train.cpp  util.cpp
cvx_orec_linemod/test/: CMakeLists.txt  test_linemod.cpp  test_tod.cpp
cvx_renderer/: CMakeLists.txt  package.xml
cvx_renderer/CMake/: FindCairo.cmake  FindOpenNI2.cmake  FindThirdParty.cmake  mingw64-toolchain.cmake
cvx_renderer/include/cvx/renderer/: renderer.hpp  scene.hpp  scene_fwd.hpp  viewpoint_sampler.hpp
cvx_renderer/render_tray/: CMakeLists.txt  render_tray.cpp
cvx_renderer/src/: CMakeLists.txt  assimp_loader.cpp  collada_loader.cpp  collada_loader.hpp  context.cpp  glsl.cpp  glsl.hpp  makeres.cpp  obj_loader.cpp  obj_loader.hpp  renderer.cpp  scene.cpp  scene_loader.cpp  scene_loader.hpp  shaders.hpp  tools.cpp  tools.hpp  viewpoint_sampler.cpp
cvx_renderer/src/shaders/: dlight.fs  flat.fs  gouraud.fs  phong.fs  rigid.vs  skinning.vs  textured.fs
cvx_renderer/test/: CMakeLists.txt  test_render.cpp  test_scene_render.cpp
cvx_util/: CMakeLists.txt  package.xml
cvx_util/CMake/: FindFreetype.cmake  FindG2O.cmake  FindGLFW3.cmake  FindThirdPartyW32.cmake  FindVL.cmake
cvx_util/include/cvx/util/camera/: calibration.hpp  camera.hpp  pose.hpp
cvx_util/include/cvx/util/geometry/: kdtree.hpp  line.hpp  line_fit.hpp  octree.hpp  point.hpp  point_list.hpp  polygon.hpp  polygon_scanner.hpp  rectangle.hpp  triangle.hpp  triangulate.hpp  trimesh_topology.hpp  util.hpp
cvx_util/include/cvx/util/imgproc/: concomp.hpp  gabor.hpp  rgbd.hpp
cvx_util/include/cvx/util/math/: random.hpp  rng.hpp
cvx_util/include/cvx/util/math/solvers/: bfgs.hpp  gradient_descent.hpp  lbfgs.hpp  line_search.hpp  util.hpp
cvx_util/include/cvx/util/misc/: application_settings.hpp  binary_stream.hpp  dictionary.hpp  filesystem.hpp  logger.hpp  progress_stream.hpp
cvx_util/include/cvx/util/pcl/: align.hpp  icp.hpp
cvx_util/include/cvx/util/viz/: gnuplot.hpp
cvx_util/src/: CMakeLists.txt
cvx_util/src/camera/: calibration.cpp  make_pattern.cpp  pose.cpp
cvx_util/src/geometry/: kdtree.cpp  octree.cpp  polygon_scanner.cpp  triangulate.cpp  trimesh_topology.cpp  util.cpp
cvx_util/src/imgproc/: concomp.cpp  gabor.cpp  rgbd.cpp
cvx_util/src/math/: rng.cpp
cvx_util/src/misc/: application_settings.cpp  binary_stream.cpp  dictionary.cpp  filesystem.cpp  logger.cpp  progress_stream.cpp
cvx_util/src/pcl/: align.cpp  icp.cpp
cvx_util/src/viz/: gnuplot.cpp
cvx_util/test/: CMakeLists.txt  convert_big_bird.cpp  test_binstream.cpp  test_calib.cpp  test_concomp.cpp  test_gfx.cpp  test_linefit.cpp  test_plane_segmentation.cpp  test_polyscanner.cpp  test_rf.cpp  test_rf.h  test_shapematch.cpp  test_solvers.cpp  test_triangulate.cpp
spring_detector/include/spring_detector/: certh_detector.hpp
spring_detector/msg/: hull.msg
spring_detector/src/: certh_detector.cpp  certh_detector_node.cpp  test_detector.cpp
spring_detector/srv/: springDetect.srv
