<?xml version="1.0"?>
<package>
	<name>cvx_orec_linemod</name>
	<version>1.0.0</version>
  	<description>Wrapper of LINEMOD algorithm for object detection and pose estimation</description>

	<maintainer email="malasiot@iti.gr">Sotiris Malassiotis</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>libpcl-all-dev</build_depend>
	<build_depend>libopencv-dev</build_depend>
	<build_depend>eigen</build_depend>
	<build_depend>cvx_util</build_depend>
	<build_depend>cvx_renderer</build_depend>

    <run_depend>libpcl-all</run_depend>
	<run_depend>libopencv-dev</run_depend>
	<run_depend>cvx_util</run_depend>
	<run_depend>cvx_renderer</run_depend>

</package>
