<?xml version="1.0"?>
<package>
	<name>cvx_util</name>
	<version>1.0.0</version>
  	<description>Various utility libraries for vision and geometry</description>

	<maintainer email="malasiot@iti.gr">Sotiris Malassiotis</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>libopencv-dev</build_depend>
	<build_depend>eigen</build_depend>

	<run_depend>libopencv-dev</run_depend>
</package>
